test/disabled/neg/macro-keyword-package2.check
macro-keyword-package2.scala:3: error: identifier expected but 'macro' found.
package macro.foo
        ^
one error found
